--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -20,6 +20,38 @@
     "\n",
     "from category_encoders import MEstimateEncoder"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Object' object has no attribute 'to_parquet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[17], line 11\u001B[0m\n\u001B[1;32m      3\u001B[0m client \u001B[38;5;241m=\u001B[39m Minio(\n\u001B[1;32m      4\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m127.0.0.1:9000\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      5\u001B[0m         access_key\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m91v98eLB1zOwDPo8\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      6\u001B[0m         secret_key\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m6ZDwLVoC14AMOVCJozvJtIUjjwZfa0Ma\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      7\u001B[0m         secure\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m      8\u001B[0m )\n\u001B[1;32m     10\u001B[0m df \u001B[38;5;241m=\u001B[39m client\u001B[38;5;241m.\u001B[39mfget_object(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdemo-bucket\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtitanic_pca_feature.parquet\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtitanic_pca_feature.parquet\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 11\u001B[0m \u001B[43mdf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mto_parquet\u001B[49m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfeast_demo/feature_repo/data/titanic_pca_feature.parquet\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Object' object has no attribute 'to_parquet'"
+     ]
+    }
+   ],
+   "source": [
+    "from minio import Minio\n",
+    "\n",
+    "client = Minio(\n",
+    "        \"127.0.0.1:9000\",\n",
+    "        access_key=\"91v98eLB1zOwDPo8\",\n",
+    "        secret_key=\"6ZDwLVoC14AMOVCJozvJtIUjjwZfa0Ma\",\n",
+    "        secure=False,\n",
+    ")\n",
+    "\n",
+    "client.fget_object(\"demo-bucket\", \"titanic_pca_feature.parquet\", \"titanic_pca_feature.parquet\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
